vs-basic.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
  - onlineboutique.example.com
  gateways:
  - frontend-gateway
  http:
    - route:
      - destination:
          host: frontend.default.svc.cluster.local
          port:
            number: 80
