vs-user-agent.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - frontend-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Firefox.*"
    route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v1
          port:
            number: 80
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v2
          port:
            number: 80
